Add social icons

--- a/index.html
+++ b/index.html
@@ -28,10 +28,35 @@
 
         <!-- particles.js container -->
         <div id="particles-js">
+            <img src="img/evan_suau.jpg" alt="Evan Suau" id="profile-picture" class="content" />
             <h1 id="name" class="content">I am Evan Suau.</h1>
-            <a href="https://www.linkedin.com/in/evansuau" target="_blank">
-                <img src="img/evan_suau.jpg" alt="Evan Suau" id="profile-picture" class="content" />
-            </a>
+
+            <div id="social-icons" class="content">
+                <a href="https://www.linkedin.com/in/evansuau" target="_blank">
+                    <img src="img/icons/Linkedin.png" alt="Linkedin icon" />
+                </a>
+                <a href="https://github.com/esuau" target="_blank">
+                    <img src="img/icons/Github-Icon.png" alt="GitHub icon" />
+                </a>
+                <a href="https://twitter.com/evan_suau" target="_blank">
+                    <img src="img/icons/Twitter-Icon.png" alt="Twitter icon" />
+                </a>
+                <a href="https://plus.google.com/+EvanSUAU" target="_blank">
+                    <img src="img/icons/Google-plus-icon.png" alt="Google Plus icon" />
+                </a>
+                <a href="https://www.facebook.com/suau.evan" target="_blank">
+                    <img src="img/icons/facebook-Icon.png" alt="Facebook icon" />
+                </a>
+                <a href="https://www.instagram.com/evan_suau" target="_blank">
+                    <img src="img/icons/Instagram-Icon.png" alt="Instagram icon" />
+                </a>
+                <a href="https://pinterest.com/esuau/" target="_blank">
+                    <img src="img/icons/Pinterest-Icon.png" alt="Pinterest icon" />
+                </a>
+                <a href="https://www.flickr.com/photos/evan_suau/" target="_blank">
+                    <img src="img/icons/flickr-Icon.png" alt="Flickr icon" />
+                </a>
+            </div>
         </div>
 
         <!-- scripts -->
