Fix icon display issue

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <img src="img/icons/Pinterest-Icon.png" alt="Pinterest icon" />
                 </a>
                 <a href="https://www.flickr.com/photos/evan_suau/" target="_blank">
-                    <img src="img/icons/flickr-Icon.png" alt="Flickr icon" />
+                    <img src="img/icons/Flickr-Icon.png" alt="Flickr icon" />
                 </a>
             </div>
         </div>
