--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 </head>
-<body>
-  <app-root></app-root>
+<body class="mat-app-background">
+  <app-root class="mat-typography"></app-root>
 </body>
 </html>
