seo: Add Google Search Console meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>I am Evan Suau.</title>
   <base href="/">
 
+  <meta name="google-site-verification" content="LX1mxufBAaW6Zqh6I5SaJy7mDYLIHY518uqodfj8e7U">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
