--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>I am Evan Suau.</title>
   <base href="/">
 
-  <meta name="description" content="I am Evan Suau. 👨‍🎓 I am an engineering student. 💻 I am a full-stack developer. 🚀 I am passionate about entrepreneurship & innovation.">
+  <meta name="description" content="I am Evan Suau. 💻 I am a software engineer. 🚀 I am passionate about tech, entrepreneurship & innovation.">
   <meta name="keywords" content="evan suau, suau evan, evan suau personal website, evan suau github, evan suau resume, evan suau devops, evan suau developer, evan suau software">
   <meta name="google-site-verification" content="LX1mxufBAaW6Zqh6I5SaJy7mDYLIHY518uqodfj8e7U">
   <meta name="viewport" content="width=device-width, initial-scale=1">
