--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <title>I am Evan Suau.</title>
   <base href="/">
-
-  <meta name="description" content="I am Evan Suau. 💻 I am a software engineer. 🚀 I am passionate about tech, entrepreneurship & innovation.">
-  <meta name="keywords" content="evan suau, suau evan, evan suau personal website, evan suau github, evan suau resume, evan suau devops, evan suau developer, evan suau software">
+  <meta name="description" content="I am Evan Suau. I am a software engineer. I am passionate about tech, entrepreneurship & innovation.">
+  <meta name="keywords" content="evan suau, suau evan, evan suau website, evan suau github, evan suau resume, evan suau devops, evan suau developer, evan suau software">
   <meta name="google-site-verification" content="LX1mxufBAaW6Zqh6I5SaJy7mDYLIHY518uqodfj8e7U">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
