--- a/index.html
+++ b/index.html
@@ -1,18 +1,150 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>I am Evan Suau.</title>
-  <base href="/">
-  <meta name="description" content="I am Evan Suau. I am a software engineer. I am passionate about tech, entrepreneurship &amp; innovation.">
-  <meta name="keywords" content="evan suau, suau evan, evan suau website, evan suau github, evan suau resume, evan suau devops, evan suau developer, evan suau software">
-  <meta name="google-site-verification" content="LX1mxufBAaW6Zqh6I5SaJy7mDYLIHY518uqodfj8e7U">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.48b058bfc03110338eaf.css"></head>
-<body>
-  <app-root></app-root>
-<script src="runtime.96a59237b9b15a5ae905.js" defer></script><script src="polyfills.817b30eab0b975184b6b.js" defer></script><script src="scripts.0cfb697d14e9a005a6fd.js" defer></script><script src="main.5a46ccb923dbaa1ee772.js" defer></script></body>
+  <head>
+    <meta charset="utf-8" />
+    <title>I am Evan Suau.</title>
+    <meta
+      name="description"
+      content="I am Evan Suau. I am a software engineer. I am passionate about software, tech &amp; innovation."
+    />
+    <meta
+      name="keywords"
+      content="evan suau, suau evan, evan suau website, evan suau github, evan suau resume, evan suau devops, evan suau developer, evan suau software"
+    />
+    <meta
+      name="google-site-verification"
+      content="LX1mxufBAaW6Zqh6I5SaJy7mDYLIHY518uqodfj8e7U"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+  <body>
+    <header></header>
+
+    <main>
+      <div class="card">
+        <div class="card-header">
+          <img
+            id="profile-picture"
+            src="assets/evan_suau.jpg"
+            alt="Profile picture"
+          />
+        </div>
+
+        <div class="card-body">
+          <h1 class="title">Evan Suau</h1>
+          <h2 class="subtitle">Software Developer</h2>
+
+          <h3 class="section-title">Location</h3>
+          <p>Montreal, Quebec, Canada</p>
+
+          <h3 class="section-title">Bio</h3>
+          <p>
+            I am a back-end developer at
+            <a
+              rel="noopener noreferrer"
+              target="_blank"
+              href="https://en.wikipedia.org/wiki/Intact_Financial"
+            >
+              Intact Financial Corporation
+            </a>
+            in Montreal, QC, Canada. I'm part of a team inside
+            <a
+              rel="noopener noreferrer"
+              target="_blank"
+              href="https://intactlab.ca/"
+            >
+              Intact Lab
+            </a>
+            developing the back-end for the company's mobile app. Previously I
+            was a full-stack developer at
+            <a
+              rel="noopener noreferrer"
+              target="_blank"
+              href="https://en.wikipedia.org/wiki/Soci%C3%A9t%C3%A9_G%C3%A9n%C3%A9rale"
+            >
+              Société Générale
+            </a>
+            Corporate and Investment Banking, working on trading systems for the
+            financial market activities of the firm in America. I moved to
+            Canada in 2019 after completing my studies and my apprenticeship as
+            a software developer at
+            <a
+              rel="noopener noreferrer"
+              target="_blank"
+              href="https://en.wikipedia.org/wiki/BRED_Banque_populaire"
+            >
+              BRED Banque Populaire
+            </a>
+            in Paris, France. I have a
+            <a
+              rel="noopener noreferrer"
+              target="_blank"
+              href="https://en.wikipedia.org/wiki/Dipl%C3%B4me_d%27Ing%C3%A9nieur"
+            >
+              French engineer's degree
+            </a>
+            (M.Sc.Eng.) in Information Systems from the
+            <a
+              rel="noopener noreferrer"
+              target="_blank"
+              href="https://episen.u-pec.fr/"
+            >
+              École Supérieure d'Ingénieurs de Paris-Est Créteil
+            </a>
+            with a major in cloud computing.
+          </p>
+
+          <h3 class="section-title">Interests</h3>
+          <div>
+            <span class="badge" style="border-color: green">
+              Software development
+            </span>
+            <span class="badge" style="border-color: blueviolet">
+              Cloud computing
+            </span>
+            <span class="badge" style="border-color: deepskyblue">
+              Continuous delivery
+            </span>
+            <span class="badge" style="border-color: orangered"> DevOps </span>
+            <span class="badge" style="border-color: brown">
+              Agile project management
+            </span>
+          </div>
+
+          <h3 class="section-title">Contact</h3>
+          <div style="margin-top: 1.5rem">
+            <a
+              class="button"
+              rel="noopener noreferrer"
+              target="_blank"
+              href="https://keyserver.pgp.com/vkd/DownloadKey.event?keyid=0x4A2EE6EF801BD78F"
+            >
+              Download PGP public key
+            </a>
+          </div>
+
+          <h3 class="section-title">Social media</h3>
+          <div>
+            <a
+              class="social-icon twitter"
+              rel="noopener noreferrer"
+              target="_blank"
+              href="https://twitter.com/evan_suau"
+            ></a>
+            <a
+              class="social-icon linkedin"
+              rel="noopener noreferrer"
+              target="_blank"
+              href="https://www.linkedin.com/in/evansuau"
+            ></a>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer></footer>
+  </body>
 </html>
