Add GitHub link

--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
   </head>
 
   <body>
-    <header></header>
-
     <main>
       <div class="card">
         <div class="card-header">
@@ -126,7 +124,7 @@
             </a>
           </div>
 
-          <h3 class="section-title">Social media</h3>
+          <h3 class="section-title">Links</h3>
           <div>
             <a
               class="social-icon twitter"
@@ -139,6 +137,12 @@
               rel="noopener noreferrer"
               target="_blank"
               href="https://www.linkedin.com/in/evansuau"
+            ></a>
+            <a
+              class="social-icon github"
+              rel="noopener noreferrer"
+              target="_blank"
+              href="https://github.com/esuau"
             ></a>
           </div>
         </div>
