--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
           <h3 class="section-title">Bio</h3>
           <p>
-            I am a back-end developer at
+            I'm a back-end developer at
             <a
               rel="noopener noreferrer"
               target="_blank"
