Make links accessible

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
               rel="noopener noreferrer"
               target="_blank"
               href="https://en.wikipedia.org/wiki/Intact_Financial"
+              aria-label="Link to the Wikipedia page for Intact Financial Corporation"
             >
               Intact Financial Corporation
             </a>
@@ -53,6 +54,7 @@
               rel="noopener noreferrer"
               target="_blank"
               href="https://intactlab.ca/"
+              aria-label="Link to Intact Lab's website"
             >
               Intact Lab
             </a>
@@ -62,6 +64,7 @@
               rel="noopener noreferrer"
               target="_blank"
               href="https://en.wikipedia.org/wiki/Soci%C3%A9t%C3%A9_G%C3%A9n%C3%A9rale"
+              aria-label="Link to the Wikipedia page for Societe Generale"
             >
               Société Générale
             </a>
@@ -73,6 +76,7 @@
               rel="noopener noreferrer"
               target="_blank"
               href="https://en.wikipedia.org/wiki/BRED_Banque_populaire"
+              aria-label="Link to the Wikipedia page for BRED Banque Populaire"
             >
               BRED Banque Populaire
             </a>
@@ -81,6 +85,7 @@
               rel="noopener noreferrer"
               target="_blank"
               href="https://en.wikipedia.org/wiki/Dipl%C3%B4me_d%27Ing%C3%A9nieur"
+              aria-label="Link to the Wikipedia page for the French engineer's degree"
             >
               French engineer's degree
             </a>
@@ -89,6 +94,7 @@
               rel="noopener noreferrer"
               target="_blank"
               href="https://episen.u-pec.fr/"
+              aria-label="Link to EPISEN's website"
             >
               École Supérieure d'Ingénieurs de Paris-Est Créteil
             </a>
@@ -119,6 +125,7 @@
               rel="noopener noreferrer"
               target="_blank"
               href="https://keyserver.pgp.com/vkd/DownloadKey.event?keyid=0x4A2EE6EF801BD78F"
+              aria-label="Link to download PGP public key"
             >
               Download PGP public key
             </a>
@@ -131,18 +138,21 @@
               rel="noopener noreferrer"
               target="_blank"
               href="https://twitter.com/evan_suau"
+              aria-label="Link to my Twitter profile"
             ></a>
             <a
               class="social-icon linkedin"
               rel="noopener noreferrer"
               target="_blank"
               href="https://www.linkedin.com/in/evansuau"
+              aria-label="Link to my LinkedIn profile"
             ></a>
             <a
               class="social-icon github"
               rel="noopener noreferrer"
               target="_blank"
               href="https://github.com/esuau"
+              aria-label="Link to my GitHub profile"
             ></a>
           </div>
         </div>
