fix: Update link to PGP public key

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               class="button"
               rel="noopener noreferrer"
               target="_blank"
-              href="https://keyserver.pgp.com/vkd/DownloadKey.event?keyid=0x4A2EE6EF801BD78F"
+              href="https://pgp.mit.edu/pks/lookup?op=get&search=0x4A2EE6EF801BD78F"
               aria-label="Link to download PGP public key"
             >
               Download PGP public key
