feat: Update profile picture

--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
     <main>
       <div class="card">
         <div class="card-header">
-          <img
-            id="profile-picture"
-            src="assets/evan_suau.jpg"
-            alt="Profile picture"
-          />
+          <picture>
+            <source media="(min-width: 1200px)" srcset="assets/evan_suau.jpg">
+            <img
+              id="profile-picture"
+              src="assets/evan_suau_small.jpg"
+              alt="Profile picture"
+              title="Photo by Julian Haber"
+            />
+          </picture>
         </div>
 
         <div class="card-body">
