--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
       <div class="card">
         <div class="card-header">
           <picture>
-            <source media="(min-width: 1200px)" srcset="assets/evan_suau.jpg">
+            <source media="(min-width: 1200px)" srcset="assets/evan_suau.webp">
             <img
               id="profile-picture"
-              src="assets/evan_suau_small.jpg"
+              src="assets/evan_suau_small.webp"
               alt="Profile picture"
               title="Photo by Julian Haber"
+              height="200vh"
             />
           </picture>
         </div>
